
[workspace]
[package]
name = "sha2-chain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sp1-zkvm = { git = "https://github.com/succinctlabs/sp1", branch = "dev" }
risc0-zkvm = { version = "=1.0.5", default-features = false, features = ["std"] }
serde = { version = "1.0.204", default-features = false, features = ["derive"] }
sha2 = { git = "https://github.com/sp1-patches/RustCrypto-hashes.git", package = "sha2", branch = "patch-v0.9.8" }

[patch.crates-io]
# Patch sha2 so we can use sha precompiles
sha2-v0-10-8 = { git = "https://github.com/sp1-patches/RustCrypto-hashes.git", package = "sha2", branch = "patch-v0.10.8" }
[features]
risc0 = []
sp1 = []


